# OpenGL-Test

./: .gitignore  CMakeLists.txt
Scripts/CMake/: FetchLibraries.cmake
Source/OpenGLTest/: CMakeLists.txt  main.cpp
Source/OpenGLTest/Buffers/: Buffer.cpp  Buffer.h  Texture.cpp  Texture.h
Source/OpenGLTest/Core/: Core.cpp  Core.h
Source/OpenGLTest/Renderer/: Renderer.cpp  Renderer.h
Source/OpenGLTest/Shader/: Shader.cpp  Shader.h
Source/Shaders/: shader.frag  shader.vert
